2017-04-02  Eric Herman <eric@freesa.org>

	Add a ehbi_init for struct initialization
	Add ehbi_is_odd function
	Add a test-shift-right and fix bug in shifting
	Use the ehbi_init in tests
	enhance trace-ing
	sketch out a 'is-probably-prime' (Miller-Rabin)

	* src/ehbigint.h: add ehbi_init, ehbi_is_odd
	* src/ehbigint.c: add ehbi_init, minor TODOs, easier debug
	* src/ehbigint-log.h: more tracing options
	* src/ehbigint-str.c: use tracing, debug friendly++
	* src/ehbigint-priv.h: move internal/private headers here
	* src/ehbigint-priv.c: move internal/private functions here
	* tests/test-add.c: ehbi_init
	* tests/test-bytes-shift-left.c: ehbi_init
	* tests/test-bytes-shift-right.c: ehbi_init
	* tests/test-comp-exp-mod-with-gmp.c: ehbi_init
	* tests/test-comp-mul-with-gmp.c: ehbi_init
	* tests/test-compare.c: ehbi_init
	* tests/test-compare2.c: ehbi_init
	* tests/test-dec-corner-case.c: ehbi_init
	* tests/test-dec.c: ehbi_init
	* tests/test-div.c: ehbi_init
	* tests/test-equals.c: ehbi_init
	* tests/test-exp-mod.c: ehbi_init
	* tests/test-from-decimal-to-decimal-round-trip.c: ehbi_init
	* tests/test-from-hex-to-hex-round-trip.c: ehbi_init
	* tests/test-inc-l.c: ehbi_init
	* tests/test-inc.c: ehbi_init
	* tests/test-mul.c: ehbi_init
	* tests/test-scenario-mul-mod.c: ehbi_init
	* tests/test-set-l.c: ehbi_init
	* tests/test-set.c: ehbi_init
	* tests/test-shift-right.c: new test
	* tests/test-subtract.c: ehbi_init
	* tests/test-is-probably-prime.c: XFAIL test
	* misc/pre-tidy.patch: respin
	* Makefile.am: test-shift-right, test-is-probably-prime
	* .gitignore: test-shift-right, test-is-probably-prime


2017-04-01  Eric Herman <eric@freesa.org>

	add "ehbi_zero" setter
	add some debug tracing options for printf debugging

	* src/ehbigint.h: add a set "zero" function
	* src/ehbigint.c: add the printf tracing
	* misc/pre-tidy.patch: adjust the patch


2017-03-26  Eric Herman <eric@freesa.org>

	add ehbi_shift_left, ehbi_shift_right functions to API